--- a/box/style.css
+++ b/box/style.css
@@ -1,3 +1,10 @@
+div.box {
+  height: 300px;
+  width: 300px;
+  background-color: #bbbbaa;
+}
 p {
-  color: orange;
+  height:75%;
+  width: 75%;
+  background-color: #0088dd;
 }
